--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pawel Marcinkowski",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.15.4"
   },
   "devDependencies": {
