--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "app/server.js",
   "scripts": {
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "start": "nodemon app/server.js"
   },
   "author": "Pawel Marcinkowski",
   "license": "MIT",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "gulp-nodemon": "^2.2.1"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
@@ -18,8 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.2.1",
+    "gulp-concat": "^2.6.1",,
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
