--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.6.1",,
+    "gulp-nodemon": "^2.2.1",
+    "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
