--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pawel Marcinkowski",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-minify-html": "^0.11.4",
