--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/server.js",
   "scripts": {
     "gulp": "gulp",
-    "start": "nodemon app/server.js"
+    "start": "node app/server.js"
   },
   "author": "Pawel Marcinkowski",
   "license": "MIT",
